tui-components/tests/snapshots/shimmer_snapshots__shimmer_basic.snap
---
source: tui-components/tests/shimmer_snapshots.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 20, height: 1 },
    content: [
        "Loading...          ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 10, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
