tui-components/tests/snapshots/shimmer_snapshots__shimmer_empty.snap
---
source: tui-components/tests/shimmer_snapshots.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 20, height: 1 },
    content: [
        "                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
